--- a/docs/less/blocks/_header.less
+++ b/docs/less/blocks/_header.less
@@ -328,16 +328,12 @@ header{
 
 .header__info-content-wrapper{
     max-width: 400px;
+    text-align: center;
 
     // Планшет 
     @media(min-width: 768px){
         max-width: unset;
         width: 50%;
-    }
-
-    //Десктоп
-    @media(min-width: 1200px){
-
     }
 }
 
