--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -3,3 +3,5 @@
 @import "./blocks/_section-skills.less";
 @import "./blocks/_section-portfolio.less";
 @import "./blocks/_section-how-work.less";
+@import "./blocks/_section-contacts.less";
+@import "./blocks/_footer.less";
