--- a/docs/less/blocks/_section-portfolio.less
+++ b/docs/less/blocks/_section-portfolio.less
@@ -116,6 +116,7 @@
     font-size: 22px;
     max-width: 360px;
     transition: 0.3s;
+    text-align: center;
 
     margin-bottom: 55px;
 
@@ -172,7 +173,7 @@
         bottom: 0;
         background-color: rgba(0, 174, 255, 0.6);
         transform: translateY(100%);
-        transition: 0.5s;
+        transition: 1s;
     }
 
     &:hover::before{
@@ -221,8 +222,7 @@
     // font-size: 22px;
     font-weight: 700;
     color: black;
-    transition: 0.2s;
-    padding-left: 5px;
+    transition: 0.4s;
 
     margin-bottom: 5px;
 
@@ -248,7 +248,6 @@
 .section-portfolio__project-desc{
     font-size: 16px;
     font-weight: 300;
-    padding-left: 5px;
 
     // Планшет 
     @media(min-width: 768px){
