--- a/docs/less/blocks/_section-portfolio.less
+++ b/docs/less/blocks/_section-portfolio.less
@@ -129,10 +129,6 @@
         width: 340px;
         margin-bottom: 25px;
         font-size: 24px;
-
-        &:last-child{
-            display: none;
-        }
     }
 
     //Десктоп
@@ -141,10 +137,6 @@
         margin-bottom: 40px;
         width: 34%;
         max-width: 360px;
-
-        &:last-child{
-            display: block;
-        }
     }
 }
 
@@ -159,10 +151,8 @@
 .section-portfolio__project-img{
     display: block;
     position: relative;
-    overflow: hidden;
-
+    overflow: hidden hidden;
     margin-bottom: 20px;
-
 
     &::before{
         content: "";
@@ -219,7 +209,6 @@
 }
 
 .section-portfolio__project-title{
-    // font-size: 22px;
     font-weight: 700;
     color: black;
     transition: 0.4s;
@@ -233,16 +222,6 @@
     &:active{
         color: red;
     }
-
-    // // Планшет 
-    // @media(min-width: 768px){
-    //     font-size: 24px;
-    // }
-
-    // //Десктоп
-    // @media(min-width: 1200px){
-    //     font-size: 26px;
-    // }
 }
 
 .section-portfolio__project-desc{
@@ -264,6 +243,7 @@
     max-width: 360px;
     margin-left: auto;
     margin-right: auto;
+    display: none;
 
     // Планшет 
     @media(min-width: 768px){
