--- a/docs/less/blocks/_section-portfolio.less
+++ b/docs/less/blocks/_section-portfolio.less
@@ -115,13 +115,14 @@
     width: 100%;
     font-size: 22px;
     max-width: 360px;
-    transition: 0.3s;
+    transition: 0.5s;
     text-align: center;
 
     margin-bottom: 55px;
 
     &:hover{
         box-shadow: 0 0 8px rgb(0, 174, 255);
+        border-radius: 0 0 15px 15px;
     }
 
     // Планшет 
