--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -840,12 +840,13 @@ header {
   width: 100%;
   font-size: 22px;
   max-width: 360px;
-  transition: 0.3s;
+  transition: 0.5s;
   text-align: center;
   margin-bottom: 55px;
 }
 .section-portfolio__project:hover {
   box-shadow: 0 0 8px #00aeff;
+  border-radius: 0 0 15px 15px;
 }
 @media (min-width: 768px) {
   .section-portfolio__project {
