--- a/docs/less/blocks/_footer.less
+++ b/docs/less/blocks/_footer.less
@@ -1,7 +1,12 @@
 .footer{
-    padding-top: 25px;
-    padding-bottom: 35px;
+    padding-top: 32px;
+    padding-bottom: 60px;
     background-color: #333333;
+
+    //Десктоп
+    @media(min-width: 1200px){
+        padding-top: 23px;
+    }
 }
 
 .footer__who{
