--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -5,3 +5,5 @@
 @import "./blocks/_section-how-work.less";
 @import "./blocks/_section-contacts.less";
 @import "./blocks/_footer.less";
+@import "./blocks/_footer-project.less";
+@import "./blocks/_page-project.less";
