--- a/docs/less/blocks/_header.less
+++ b/docs/less/blocks/_header.less
@@ -1,4 +1,4 @@
-header{
+.header{
     padding-top: 22px;
     padding-bottom: 95px;
 
@@ -7,7 +7,7 @@ header{
     // Планшет 
     @media(min-width: 768px){
         padding-top: 20px;
-        padding-bottom: 20px;
+        padding-bottom: 45px;
     }
 
     //Десктоп
@@ -90,7 +90,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 40px;
+    padding-left: 30px;
     padding-top: 80px;
     width: 100%;
     max-width: 400px;
@@ -104,10 +104,20 @@ header{
     .section-skills__mail{
         color: rgb(0, 174, 255);
         display: none;
+        font-weight: 400;
+    }
+
+    .section-skills__mail::after{
+        height: 1px;
+        bottom: 1px;
     }
 
     .contacts-social{
         display: none;
+    }
+
+    .header-logo{
+        margin-bottom: 40px;
     }
 
     //Десктоп
@@ -122,6 +132,10 @@ header{
         padding-left: 0;
         width: auto;
         transform: translateX(0%);
+
+        .header-logo{
+            display: none;
+        }
     }
 }
 
@@ -135,7 +149,7 @@ header{
 
 .header__nav.active{
     transform: translateX(0%);
-    padding-top: 110px;
+    padding-top: 25px;
 
     .contacts-social{
         display: flex;
@@ -146,12 +160,13 @@ header{
     }
 
     .header__nav-item{
-        margin-bottom: 10px;
+        margin-bottom: 15px;
 
         &:nth-last-child(3){
             margin-bottom: 40px;
         }
     }
+
 }
 
 .header__nav-item{
@@ -159,6 +174,17 @@ header{
     position: relative;
     z-index: 2;
     color: black;
+   
+    &::after{
+        content: "";
+        position: absolute;
+        bottom: 3px;
+        left: -2px;
+        width: 105%;
+        height: 2px;
+        background-color: black;
+        z-index: -1;
+    }
 
     //Десктоп
     @media(min-width: 1200px){
@@ -172,22 +198,22 @@ header{
         &:nth-last-child(2){
             margin-bottom: 0;
         }
-    }
 
-    &::after{
-        content: "";
-        position: absolute;
-        bottom: 3px;
-        left: 0;
-        width: 0;
-        height: 5px;
-        background-color: rgb(0, 174, 255);
-        transition: 0.5s;
-        z-index: -1;
+        &::after{
+            content: "";
+            position: absolute;
+            bottom: 3px;
+            left: -2px;
+            width: 0;
+            height: 5px;
+            background-color: rgb(0, 174, 255);
+            transition: 0.5s;
+            z-index: -1;
+        }
     }
 
     &:hover::after{
-        width: 100%;
+        width: 105%;
     }
 }
 
@@ -315,11 +341,6 @@ header{
         width: 41%;
         max-width: 460px;
     }
-
-    //Десктоп
-    @media(min-width: 1200px){
-
-    }
 }
 
 .header__info-photo{
@@ -332,6 +353,7 @@ header{
 
     // Планшет 
     @media(min-width: 768px){
+        text-align: unset;
         max-width: unset;
         width: 50%;
     }
@@ -354,7 +376,7 @@ header{
     }
 }
 
-.header_name-desc{
+.header__name-desc{
     margin-bottom: 33px;
 
     font-size: 18px;
@@ -362,38 +384,37 @@ header{
     font-weight: 500;
     color: #393f47;
 
-    // Планшет 
-    @media(min-width: 768px){
-        // max-width: 390px;
-    }
-
     //Десктоп
     @media(min-width: 1200px){
-        // max-width: unset;
         font-size: 24px;
         line-height: 1.5;
     }
 }
 
 .header__button-contacts{
-    display: none;   
-    padding-left: 39px;
-    padding-right: 39px;
-    padding-top: 9px;
-    height: 64px;
     margin-left: 12px;
-    color: black;
-
+    text-decoration: none;
+    outline: none;
+    display: none;
+    padding: 11px 42px;
     border: solid 4px #464646;
     border-radius: 32px;
-
     font-size: 22px;
+    text-align: center;
     font-weight: 700;
-    transition: 0.5s;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0,0,0,.1);
+    transition: .5s;
 
-    &:hover{
-        box-shadow: 0 0 5px rgb(0, 174, 255);
-        background-color: rgba(0, 174, 255, 0.527);
+    &:hover {
+        box-shadow: 0 15px 20px rgba(8, 156, 224, 0.5);
+        color: #464646;
+        transform: translateY(-7px);
+    }
+
+    &:visited{
+        color: #464646;
     }
 
     //Десктоп
@@ -420,13 +441,13 @@ header{
 
     // Планшет 
     @media(min-width: 768px){
-        margin-bottom: 0;
+        margin-bottom: 7px;
         margin-top: -40px;
         transform: scale(1);
     }
 
     //Десктоп
     @media(min-width: 1200px){
-        margin-top: -110px;
+        margin-top: -158px;
     }
 }
