--- a/docs/less/blocks/_section-contacts.less
+++ b/docs/less/blocks/_section-contacts.less
@@ -1,12 +1,12 @@
 .contacts{
-    padding-top: 50px;
+    padding-top: 42px;
     padding-bottom: 60px;
     background-color: #f4f8f9;
 
     // Планшет 
     @media(min-width: 768px){
-        padding-top: 70px;
-        padding-bottom: 70px;
+        padding-top: 72px;
+        padding-bottom: 90px;
     }
 
     //Десктоп
@@ -22,7 +22,7 @@
     text-align: center;
     padding-top: 60px;
     margin-top: -60px;
-    margin-bottom: 50px;
+    margin-bottom: 39px;
 
     // Планшет 
     @media(min-width: 768px){
@@ -62,11 +62,15 @@
 
     // Планшет 
     @media(min-width: 768px){
+        margin-top: -7px;
+        padding-left: 10px;
         width: calc(~"50% - 15px");
     }
 
     //Десктоп
     @media(min-width: 1200px){
+        margin-top: 0;
+        padding-left: 15px;
         padding-top: 25px;
     }
 }
@@ -85,6 +89,7 @@
 .contacts__desc-img{
     display: none;
     position: absolute;
+    z-index: 1;
     top: 0;
     left: -350px;
 
@@ -95,7 +100,6 @@
 }
 
 .contacts__form-wrapper{
-
     // Планшет 
     @media(min-width: 768px){
         width: calc(~"50% - 15px");
@@ -117,13 +121,9 @@
         box-shadow: 0px 28px 100px 0px rgba(0, 174, 255, 0.404);
     }
 
-    // Планшет 
-    @media(min-width: 768px){
-
-    }
-
     //Десктоп
     @media(min-width: 1200px){
+        padding-top: 72px;
         width: 92%;
     }
 }
@@ -133,17 +133,13 @@
     margin-bottom: 32px;
     position: relative;
 
-    &:last-child{
-        margin-bottom: 0;
+    &:nth-last-child(2){
+        margin-bottom: 12px;
     }
 
     // Планшет 
     @media(min-width: 768px){
         margin-bottom: 32px;
-
-        &:nth-last-child(2){
-            margin-bottom: 12px;
-        }
     }
 
     //Десктоп
@@ -152,7 +148,7 @@
         width: 76%;
 
         &:nth-last-child(2){
-            margin-bottom: 56px;
+            margin-bottom: 34px;
         }
     }
 }
@@ -186,11 +182,6 @@
 .contacts__form-field--area{
     resize: none;
     height: 130px;
-
-    // Планшет 
-    @media(min-width: 768px){
-
-    }
 
     //Десктоп
     @media(min-width: 1200px){
@@ -232,16 +223,18 @@
     //Десктоп
     @media(min-width: 1200px){
         justify-content: flex-start;
-        margin-left: 57px;
+        margin-left: 82px;
     }
 }
 
 .contacts__form-button-elem{
+    -moz-appearance: none;
+    -webkit-appearance: none;
     height: 54px;
-    color: black;
+    color: white;
     width: 85%;
 
-    background-color: rgb(0, 174, 255);
+    box-shadow: 0 0 40px 40px rgb(0, 174, 255) inset, 0 0 0 0 rgb(0, 174, 255), 0 0 3px 0 black;
     border-radius: 27px;
     border: none;
 
@@ -253,9 +246,17 @@
 
     cursor: pointer;
 
-    &:hover{
-        // box-shadow: 0 0 10px rgb(0, 225, 255);
-        box-shadow: 0 0 15px rgb(0, 174, 255);
+    &:hover {
+        box-shadow: 0 0 10px 0 rgb(0, 174, 255) inset, 0 0 10px 2px rgb(0, 174, 255);
+        color: rgb(0, 174, 255);
+    }
+
+    &:visited{
+        color: white;
+    }
+
+    &:visited:hover{
+        color: rgb(0, 174, 255);
     }
 
     // Планшет 
@@ -265,7 +266,7 @@
 
     //Десктоп
     @media(min-width: 1200px){
-        font-size: 18px;
+        font-size: 22px;
         width: unset;
         height: 64px;
         padding-left: 42px;
@@ -275,6 +276,8 @@
 }
 
 .contacts__desc-text{
+    position: relative;
+    z-index: 2;
     margin-bottom: 20px;
     max-width: 510px;
     font-size: 16px;
@@ -282,6 +285,7 @@
 
     // Планшет 
     @media(min-width: 768px){
+        max-width: 290px;
         font-size: 18px;
         line-height: 1.56;
         margin-bottom: 30px;
@@ -289,6 +293,7 @@
 
     //Десктоп
     @media(min-width: 1200px){
+        max-width: unset;
         font-size: 20px;
         line-height: 1.6;
         margin-bottom: 40px;
@@ -296,7 +301,14 @@
 }
 
 .contacts__desc-contacts-wrap{
-    margin-bottom: 45px;
+    position: relative;
+    z-index: 2;
+    margin-bottom: 34px;
+
+    //Десктоп
+    @media(min-width: 1200px){
+        margin-bottom: 45px;
+    }
 }
 
 .contacts__desc-contacts-item{
@@ -306,8 +318,8 @@
     margin-bottom: 10px;
     font-size: 18px;
 
-    &:hover .contacts__desc-contacts-item-link::after{
-        width: 100%;
+    &:hover .contacts__item-link::after{
+        width: 103%;
     } 
 
     // Планшет 
@@ -323,12 +335,12 @@
     }
 }
 
-.contacts__desc-contacts-item-name{
+.contacts__item-name{
     width: 35%;
     font-weight: 700;
 }
 
-.contacts__desc-contacts-item-link{
+.contacts__item-link{
     color: rgb(0, 174, 255);
     position: relative;
     z-index: 2;
@@ -337,8 +349,8 @@
     &::after{
         content: "";
         position: absolute;
-        bottom: 2px;        
-        left: 0;
+        bottom: 0;        
+        left: -2px;
         width: 0%;
         height: 2px;
         background-color: rgb(0, 174, 255);
@@ -352,7 +364,7 @@
 
 }
 
-.contacts__desc-contacts-item-info{
+.contacts__item-info{
     font-weight: 500;
     color: #96969d;   
 }
