--- a/docs/less/blocks/_section-how-work.less
+++ b/docs/less/blocks/_section-how-work.less
@@ -1,18 +1,18 @@
 .how-work{
     padding-top: 53px;
-    padding-bottom: 60px;
+    padding-bottom: 64px;
 
 
     // Планшет 
     @media(min-width: 768px){
-        padding-top: 85px;
+        padding-top: 73px;
         padding-bottom: 85px;   
     }
 
     //Десктоп
     @media(min-width: 1200px){
         padding-top: 129px;
-        padding-bottom: 130px;
+        padding-bottom: 143px;
         background: url("../img/how-work/bg.jpg") repeat-y center 0 / auto;
     }
 }
@@ -23,7 +23,7 @@
 
     // Планшет 
     @media(min-width: 768px){
-        margin-bottom: 155px;
+        margin-bottom: 149px;
     }
 
     //Десктоп
@@ -77,6 +77,7 @@
 
     &:last-child{
         margin-bottom: 0;
+        padding-bottom: 0;
     }
 
     &::before{
@@ -97,6 +98,7 @@
     @media(min-width: 768px){
         max-width: unset;
         width: 390px;
+        padding-bottom: 56px;
 
         &:first-child::after{
             content: "";
@@ -106,6 +108,19 @@
             height: 60px;
             width: 4px;
             background-color: #e0eef4;
+        }
+
+        &:nth-child(2){
+            padding-bottom: 20px;
+        }
+
+        &:nth-child(3){
+            padding-bottom: 1px;
+        }
+
+        &:nth-child(4){
+            padding-bottom: 0px;
+            margin-bottom: 3px;
         }
 
         &:nth-child(2n+1){
@@ -122,6 +137,7 @@
         }
 
         &:nth-child(2n+1) .how-work__stage-desc{
+            max-width: 275px;
             text-align: right;
         }
 
@@ -139,6 +155,19 @@
     //Десктоп
     @media(min-width: 1200px){
         width: 610px;
+        padding-bottom: 74px;
+
+        &:nth-child(2){
+            padding-bottom: 74px;
+        }
+
+        &:nth-child(3){
+            padding-bottom: 74px;
+        }
+
+        &:nth-child(4){
+            padding-bottom: 44px;
+        }
 
         &:first-child .how-work__stage-desc-text{
             max-width: 320px;
@@ -147,6 +176,10 @@
         &:nth-child(2n+1) .how-work__stage-icon{
             margin-right: 0;
             margin-left: 40px;  
+        }
+
+        &:nth-child(2n+1) .how-work__stage-desc{
+            max-width: 420px;
         }
     }
 }
@@ -175,9 +208,13 @@
 
     // Планшет 
     @media(min-width: 768px){
-        margin-top: 20px;
+        margin-top: 21px;
     }
 
+    // Десктоп
+    @media(min-width: 1200px){
+        margin-top: 15px;
+    }
 }
 
 .how-work__stage-desc-title{
@@ -187,20 +224,24 @@
     z-index: 2;
     font-size: 20px;
     font-weight: 800;
+    line-height: 1.5;
 
     // Планшет 
     @media(min-width: 768px){
+        line-height: 1.3;
         font-size: 24px;
+        margin-bottom: 10px;
     }
 
     //Десктоп
     @media(min-width: 1200px){
         font-size: 26px;
+        margin-bottom: 6px;
 
         &::after{
             content: "";
             position: absolute;
-            bottom: 6px;        
+            bottom: 3px;        
             left: 0;
             width: 0%;
             height: 7px;
@@ -219,6 +260,7 @@
 
     // Планшет 
     @media(min-width: 768px){
+        margin-bottom: 8px;
         font-size: 16px;
         line-height: 1.35;
     }
