--- a/docs/less/blocks/_page-project.less
+++ b/docs/less/blocks/_page-project.less
@@ -29,6 +29,8 @@
     //Десктоп
     @media(min-width: 1200px){
         background-color: #f4f8f9;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 }
 
