--- a/docs/less/blocks/_section-contacts.less
+++ b/docs/less/blocks/_section-contacts.less
@@ -18,6 +18,10 @@
     }
 }
 
+.contacts--page{
+    padding-top: 0;
+}
+
 .contacts__title-wrapper{
     text-align: center;
     padding-top: 60px;
