--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -7,3 +7,4 @@
 @import "./blocks/_footer.less";
 @import "./blocks/_footer-project.less";
 @import "./blocks/_page-project.less";
+@import "./blocks/_page-contacts.less";
