--- a/docs/less/blocks/_header.less
+++ b/docs/less/blocks/_header.less
@@ -402,19 +402,22 @@
     font-size: 22px;
     text-align: center;
     font-weight: 700;
-    color: #524f4e;
+    color: #464646;
     background: white;
-    box-shadow: 0 8px 15px rgba(0,0,0,.1);
-    transition: .5s;
+    transition: .8s;
 
     &:hover {
-        box-shadow: 0 15px 20px rgba(8, 156, 224, 0.5);
-        color: #464646;
-        transform: translateY(-7px);
+        box-shadow: 0 0 5px 0px rgb(0, 174, 255) inset;
+        border: solid 4px rgb(0, 174, 255);
+        color: rgb(0, 174, 255);
     }
 
     &:visited{
         color: #464646;
+    }
+
+    &:visited:hover{
+        color: rgb(0, 174, 255);
     }
 
     //Десктоп
