--- a/docs/less/blocks/_section-portfolio.less
+++ b/docs/less/blocks/_section-portfolio.less
@@ -153,7 +153,7 @@
 .section-portfolio__project-img{
     display: block;
     position: relative;
-    overflow: hidden hidden;
+    overflow: hidden;
     margin-bottom: 20px;
 
     &::before{
@@ -163,7 +163,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: rgba(0, 174, 255, 0.6);
+        background-color: rgba(0, 165, 255, 0.8);
         transform: translateY(100%);
         transition: 1s;
     }
@@ -207,7 +207,8 @@
     }
 
     &:active{
-        background-color: rgb(12, 172, 52);
+        background-color: white;
+        color: rgb(0, 165, 255);
     }
 }
 
