--- a/docs/less/blocks/_base.less
+++ b/docs/less/blocks/_base.less
@@ -294,3 +294,11 @@ button{
 .none{
     display: none !important;
 }
+
+.error{
+    color: red;
+    font-size: 18px;
+    font-weight: 700;
+    font-family: 'M PLUS 1p', sans-serif;
+}
+
