--- a/docs/less/blocks/_base.less
+++ b/docs/less/blocks/_base.less
@@ -302,3 +302,41 @@ button{
     font-family: 'M PLUS 1p', sans-serif;
 }
 
+#page-nav{
+    display: none;
+    position: fixed;
+    right: 60px;
+    top: 50%;
+    z-index: 100;
+
+    //Десктоп
+    @media(min-width: 1200px){
+        display: block;
+    }
+}
+
+#page-nav li{
+    width: 14px;
+    height: 14px;
+    background-color: #4dc6ff;
+    border: 1px solid #4dc6ff;
+    border-radius: 50%;
+    margin-bottom: 25px;
+    transition: 0.3s;
+    box-shadow: 0 0 2px 1px black;
+
+    &:hover{
+        border: 2px solid #0084ff;
+    }
+}
+
+#page-nav li.active{
+    background-color: #002fff;
+    border: 1px solid #002fff;
+}
+
+#page-nav li a{
+    display: block;
+    height: 100%;
+}
+
