--- a/docs/less/blocks/_base.less
+++ b/docs/less/blocks/_base.less
@@ -224,11 +224,11 @@ button{
     justify-content: center;
     align-items: center;
 
-    transition: 0.3s;
+    transition: 0.5s;
     
     &:hover{
         cursor: pointer;
-        box-shadow: 0 0 10px rgb(0, 0, 0);
+        box-shadow: 0 0 8px black;
     }
 
     &:last-child{
@@ -281,10 +281,10 @@ button{
     }
 }
 
-.contacts-social-item--facebook{
-    background-color: #3b5998;
+.contacts-social-item--whats{
+    background-color: #43d854;
     color: white;
-    font-size: 24px;
+    font-size: 31px;
 
     &:visited{
         color: white;
