--- a/docs/less/blocks/_header.less
+++ b/docs/less/blocks/_header.less
@@ -407,9 +407,9 @@
     transition: .8s;
 
     &:hover {
-        box-shadow: 0 0 2px 0px rgb(0, 174, 255) inset;
-        border: solid 4px rgb(0, 174, 255);
-        color: rgb(0, 174, 255);
+        box-shadow: 0 0 3px black;
+        border: solid 4px lighten( #464646, 20%);
+        color: lighten( #464646, 20%);
     }
 
     &:visited{
@@ -417,7 +417,7 @@
     }
 
     &:visited:hover{
-        color: rgb(0, 174, 255);
+        color: lighten( #464646, 10%);
     }
 
     //Десктоп
