--- a/docs/less/blocks/_base.less
+++ b/docs/less/blocks/_base.less
@@ -223,12 +223,12 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 
     transition: 0.5s;
     
-    &:hover{
-        cursor: pointer;
-        box-shadow: 0 0 8px black;
+    &:hover{ 
+        box-shadow: 0 0 5px black;
     }
 
     &:last-child{
@@ -259,6 +259,10 @@ button{
     &:visited{
         color: black;
     }
+
+    &:hover{
+        color: lighten( black, 30%);
+    }
 }
 
 .contacts-social-item--telegram{
@@ -268,6 +272,10 @@ button{
 
     &:visited{
         color: white;
+    }
+
+    &:hover{
+        background-color: lighten( #039be5, 10%);
     }
 }
 
@@ -279,6 +287,10 @@ button{
     &:visited{
         color: white;
     }
+
+    &:hover{
+        background-color: lighten( #4d76a1, 10%);
+    }
 }
 
 .contacts-social-item--whats{
@@ -288,6 +300,10 @@ button{
 
     &:visited{
         color: white;
+    }
+
+    &:hover{
+        background-color: lighten( #43d854, 10%);
     }
 }
 
@@ -305,13 +321,21 @@ button{
 #page-nav{
     display: none;
     position: fixed;
-    right: 60px;
+    right: 10px;
     top: 50%;
     z-index: 100;
 
     //Десктоп
     @media(min-width: 1200px){
         display: block;
+    }
+
+    @media(min-width: 1300px){
+        right: 30px;
+    }
+
+    @media(min-width: 1400px){
+        right: 50px;
     }
 }
 
