--- a/docs/less/blocks/_section-portfolio.less
+++ b/docs/less/blocks/_section-portfolio.less
@@ -116,14 +116,18 @@
     width: 100%;
     font-size: 22px;
     max-width: 360px;
-    transition: 0.5s;
+    transition: 1s;
     text-align: center;
 
     margin-bottom: 55px;
 
     &:hover{
         box-shadow: 0 0 8px rgb(0, 174, 255);
-        border-radius: 0 0 15px 15px;
+        border-radius: 10px 10px 10px 10px;
+    }
+
+    &:hover .section-portfolio__project-img{
+        border-radius: 10px 10px 0 0;
     }
 
     // Планшет 
@@ -155,6 +159,7 @@
     position: relative;
     overflow: hidden;
     margin-bottom: 20px;
+    transition: 1s;
 
     &::before{
         content: "";
@@ -209,6 +214,42 @@
     &:active{
         background-color: white;
         color: rgb(0, 165, 255);
+    }
+}
+
+.section-portfolio__project.section-portfolio__project--big img{
+    object-fit: cover;
+    width: 360px;
+    height: 240px;
+
+    // Планшет 
+    @media(min-width: 768px){
+        width: 340px;
+        height: 227px;
+    }
+
+    //Десктоп
+    @media(min-width: 1200px){
+        width: 555px;
+        height: 370px;
+    }
+}
+
+.section-portfolio__project img{
+    object-fit: cover;
+    width: 360px;
+    height: 240px;
+
+    // Планшет 
+    @media(min-width: 768px){
+        width: 340px;
+        height: 227px;
+    }
+
+    //Десктоп
+    @media(min-width: 1200px){
+        width: 360px;
+        height: 240px;
     }
 }
 
